# web_home_work_1

./: Dockerfile  pyproject.toml  requirements.txt
dzvina_assist/Classes/: ConsoleView.py
dzvina_assist/functions/: contact_info_func.py  interactive.py
