[tool.poetry]
name = "web-home-work-1"
version = "0.1.0"
description = ""
authors = ["Hubsit <vitaliy.kievskiy@hotmail.com>"]
readme = "README.md"
packages = [{include = "web_home_work_1"}]

[tool.poetry.dependencies]
python = "3.10.6"
fuzzywuzzy = "0.18.0"
levenshtein = "0.20.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
